# marathon_c_plus_plus

race00/: .test  CMakeLists.txt
race00/3dparty/: CMakeLists.txt
race00/app/: CMakeLists.txt  main.cpp
race00/app/src/: CMakeLists.txt  field.h  main.1.cpp  main.cpp  snakes.h  texture.h
sprint00/t00/: CMakeLists.txt  helloTamriel.cpp
sprint00/t01/: printDialog.cpp  printDialog.h
sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
sprint00/t03/: castSpells.cpp
sprint00/t04/: referenceOrPointer.cpp  referenceOrPointer.h
sprint00/t05/: CMakeLists.txt  main.cpp
sprint00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
sprint00/t07/: CMakeLists.txt
sprint01/: .gitignore
sprint01/t00/: CMakeLists.txt  main.cpp
sprint01/t01/: CMakeLists.txt  main.cpp
sprint01/t02/: CMakeLists.txt  main.cpp
sprint01/t03/: CMakeLists.txt  main.cpp
sprint01/t04/: CMakeLists.txt  main.cpp
sprint01/t05/: CMakeLists.txt  main.cpp
sprint02/t00/: CMakeLists.txt  main.cpp
sprint02/t01/: CMakeLists.txt  main.cpp
sprint02/t02/: CMakeLists.txt  main.cpp
sprint02/t03/: CMakeLists.txt  main.cpp
sprint03/: .gitignore
sprint03/t00/: templateAddition.h
sprint03/t01/: outputAny.h
sprint03/t02/: sumOfArguments.h
sprint03/t03/: sumFileData.h
sprint03/t04/: outputContainer.h
sprint03/t05/: squareValue.h
sprint03/t06/: isPalindrome.h
sprint03/t07/: sortValues.h
sprint04/t03/app/: CMakeLists.txt  main.cpp
sprint04/t03/app/src/: test.cpp  test.h
sprint05/t04/: CMakeLists.txt
sprint07/t00/: CMakeLists.txt  vector.h
(+111 files in other folders)
